# dooit-extras

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bun.lockb  flake.nix  pyproject.toml
.github/workflows/: comment.yml  deploy.yml
docs/: index.md
docs/.vitepress/: config.ts
dooit_bar_utils/: widget.py
dooit_bar_utils/widgets/: __init__.py  mode.py  workspace_progress.py
dooit_extras/: widget.py
dooit_extras/bar_widgets/: __init__.py  _base.py  clock.py  current_workspace.py  date.py  mode.py  platform.py  powerline.py  spacer.py  status_icons.py  text_box.py  text_poller.py  ticker.py  workspace_progress.py
dooit_extras/formatters/: __init__.py  description.py  due.py  effort.py  formatters.py  recurrence.py  status.py  urgency.py
dooit_extras/formatters/todo/: description.py  due.py
dooit_extras/scripts/: __init__.py  custom_tree_borders.py  dim_unfocused.py  toggle_workspaces.py
dooit_extras/themes/: dracula.py  gruvbox.py  material.py  nord.py  nymph.py
dooit_extras/widgets/: workspace_progress.py
nix/: default.nix
site/: bun.lockb  package.json
site/docs/: index.md
site/docs/.vitepress/: config.ts
site/docs/.vitepress/theme/: style.css
site/docs/configs/: config1.md  config2.md  config3.md
site/docs/configs/code/: config1.py  config2.py  config3.py
site/docs/formatters/: description.md  due.md  effort.md  recurrence.md  status.md  urgency.md
site/docs/getting_started/: introduction.md
site/docs/introduction/: index.md  usage.md
site/docs/scripts/: custom_tree_borders.md  dim_unfocused.md  toggle_workspaces.md
site/docs/widgets/: clock.md  current_workspace.md  custom.md  date.md  mode.md  platform.md  powerline.md  spacer.md  status_icons.md  text_box.md  text_poller.md  ticker.md  workspace_progress.md
vitepress/: package.json
