[tool.poetry]
name = "dooit-extras"
version = "0.1.0"
description = "A collection of a items to customize your dooit!"
authors = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
dooit = {path = "../dooit", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.2.2"
textual-dev = "^1.6.1"
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-asyncio = "^0.24.0"
faker = "^29.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
