[tool.poetry]
name = "dooit-extras"
version = "0.2.0"
description = "A collection of utilities to customize your dooit!"
authors = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dooit = "^3.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"
textual-dev = "^1.6.1"
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
faker = "^30.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F405", "F403"]
